--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -144,7 +144,7 @@ This final iteration of the Venn diagram still contains ambiguity, however it is
 
 \clearpage
 
-\subsection{Summary of Alternate Realities Definitions}
+\subsection{Summary of Alternate Reality Definitions}
 \label{summaryofalternaterealitydefinitions}
 %Following are the definitions \& identifying/classifying criteria for the different categories of alternate realities identified thus far in this chapter.
 
@@ -229,7 +229,7 @@ In addition to the range of alternate realities covered in the previous section,
 
 HyperReality (HR) is the term given to a hypothetical communications infrastructure that allows the seamless commingling of reality \& virtual reality, human intelligence \& artificial intelligence. In terms of the previously explored alternate reality terms, a HR system is most accurately described as facilitating the creation of mixed reality environments that bring virtual reality content into real world locations $-$ \textit{``It seeks to make virtual reality something that is experienced as part of physical reality, so that virtual and real phenomena appear to interact with each other: HR is VR} as well as, not instead of, \textit{PR''}~\cite{Terashima2001} (emphasis original).
 
-HR is an abstract, high level term that refers to a category of mixed reality environments that combine VR content with views of the real world in a manner that arguably falls under the moniker of augmented reality, however with HR there is an emphasis that the integration of the virtual reality content into the real world be performed seamlessly, such that HR enables hyperreality (this latter non-capitalised term referring to the postmodern usage of the word wherein an observer is unable to distinguish between objects that are real \& objects that are virtual).
+HR is an abstract, high level term that refers to a category of mixed reality environments that combine VR content with views of the real world in a manner that arguably falls under the moniker of augmented reality, however with HR there is an emphasis that the integration of the virtual reality content into the real world be performed seamlessly, such that HR enables hyperreality (this latter non-capitalised term referring to the postmodern usage of the word wherein an observer is unable to distinguish between objects that are real \& objects that are virtual). \textbf{***this needs a citation, perhaps Simulation \& Simulacra by Jean Baudrillard}
 
 %``HyperReality (HR) is a hypothetical basic communications infrastructure that allows possible by information technology. It allows the commingling of physical reality with virtual reality and human intelligence with artificial intelligence.''
 
@@ -291,6 +291,7 @@ PolySocial Reality (PoSR) describes situations in which people multiplex their p
 %=========================================================================================================
 
 \section{Cross Reality}
+\label{sec_crossreality}
 
 Cross Reality (XR) is the ubiquitous mixed reality situation that arises from the fusion of real-world sensor/actuator infrastructure with virtual environments, such that augmented reality and augmented virtuality manifest simultaneously and facilitate synchronous bidirectional exchange of media and control information between real and virtual environments. Sensors collect and tunnel dense real-world data into virtual environments where they are interpreted and displayed to dispersed users, whilst interaction of virtual participants simultaneously incarnates into the real world through a plenitude of diverse displays and actuators~\cite{Paradiso2009}.
 
@@ -358,15 +359,21 @@ Lifton does however explain that while such a taxonomy can be successfully appli
 
 \subsection{Position of Cross Reality}
 
-The position of XR in relation to other alternate realities can be visualised using Milgram \& Kishino's virtuality continuum. As one of the defining characteristics of a XR system is that it features two environments, both complete unto themselves, the explanation herein distinguishes between environments themselves (depicted in figures \ref{virtuality-continuum-augmented-reality} to \ref{virtuality-continuum-cross-reality-3} by solid ellipses) \& where the stimuli that the user is perceiving originate from (depicted by dashed ellipses).
+\label{positionofcrossreality}
+
+\newcommand{\avxrfootnote}{\footnote{This discussion over the relationship between AR \& XR also stands for the relationship between AV \& XR, however as AV has received less attention in the literature \& in commercially available implementations the discussion uses AR as its example.}}
+
+The position of XR in relation to other alternate realities can be visualised using Milgram \& Kishino's virtuality continuum. As one of the defining characteristics of a XR system is that it features two environments, both complete unto themselves, the explanation herein distinguishes between environments themselves (depicted in figures \ref{virtuality-continuum-augmented-reality} to \ref{virtuality-continuum-cross-reality-information-flows-dashed.png} by solid ellipses) \& where the stimuli that the user is perceiving originate from (depicted by dashed ellipses).
 
 %Ontology - The core meaning within computer science is a model for describing the world that consists of a set of types, properties, and relationship types. There is also generally an expectation that the features of the model in an ontology should closely resemble the real world (related to the object).
 
-Of particular importance is to appreciate the distinction between a XR system \& an AR system, as both concepts involve user engagement with both real \& virtual content. Whilst an AR system features a single environment, comprised of the user's RW overlain by some virtual content, with the user perceiving stimuli from this single augmented environment (figure \ref{virtuality-continuum-augmented-reality}), a XR system instead features two discrete environments, one real \& the other virtual, each complete unto itself (figure \ref{virtuality-continuum-cross-reality-1}).
+Of particular importance is to appreciate the distinction between a XR system \& an AR system\avxrfootnote{}, as both concepts involve user engagement with both real \& virtual content. Whilst an AR system features a single environment, comprised of the user's RW overlain by some virtual content, with the user perceiving stimuli from this single augmented environment (figure \ref{virtuality-continuum-augmented-reality}), a XR system instead features two discrete environments, one real \& the other virtual, each complete unto itself (figure \ref{virtuality-continuum-cross-reality-1}), with the user attending either to the stimuli originating from the real environment (figure \ref{virtuality-continuum-cross-reality-2}) or to the stimuli originating from the virtual environment (figure \ref{virtuality-continuum-cross-reality-3}).
 
-Whilst AR falls within the realms of Mixed Reality (MR), a XR system can be considered as occupying the two extremes of the continuum outwith the MR region. However, XR systems that allow simultaneous interaction with both of their constituent environments blur this definition; using a XR platform such as that discussed in this document, a user can transition between perceiving stimuli from each of these environments (figures \ref{virtuality-continuum-cross-reality-2} \& \ref{virtuality-continuum-cross-reality-3}) in a manner that allows them to engage with each environment without becoming wholly vacant from the other.
+Although a XR system as a whole should definitely be considered a case of MR, whether each of its constituent environments should be considered outwith or within the realm of MR (especially when visualised upon the continuum) is open to debate. Taking the real environment as an example, one could argue that the use of actuators to produce physically observable effects on behalf of controls from the virtual environment constitutes an AR environment. However in adhering to the definition of AR adopted earlier (see section \ref{summaryofalternaterealitydefinitions}) we would not label this an AR environment as we do not have \textit{virtual} objects overlain upon our view of the real environment, but rather \textit{real} objects controlled by the actions \& events of a discrete virtual environment. So whilst an AR environment falls within the realms of MR, the constituent environments of a XR system when considered individually are considered as occupying the two extremes of the continuum, outwith the MR region \& thus their depiction as such in figures \ref{virtuality-continuum-cross-reality-2} \& \ref{virtuality-continuum-cross-reality-2}.
 
-\textbf{***This is also true of AV, but AV is not as commonly seen a paradigm (yet)***}
+%***this is more to do distribution of the dashed line surrounding the environments, rather than the position of the environments themselves (solid line)***
+
+%However, XR systems that allow simultaneous interaction with both of their constituent environments blur this definition; using a XR platform such as that discussed in this document, a user can transition between perceiving stimuli from each of these environments (figures \ref{virtuality-continuum-cross-reality-2} \& \ref{virtuality-continuum-cross-reality-3}) in a manner that allows them to engage with each environment without becoming wholly vacant from the other.
 
 \begin{figure}[h]
 	\begin{center}
@@ -384,10 +391,6 @@ Whilst AR falls within the realms of Mixed Reality (MR), a XR system can be cons
 	\end{center}
 \end{figure}
 
-\textbf{Is it worth pointing out on the diagram that a true XR system would have a constant bi-directional stream of data between the two environments? And that without this, we have something like parallel reality?}
-
-\textbf{Combined 3.13 \& 3.14 with 3.15 to properly show stuff.}
-
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{virtuality-continuum-cross-reality-2.png}
@@ -404,18 +407,126 @@ Whilst AR falls within the realms of Mixed Reality (MR), a XR system can be cons
 	\end{center}
 \end{figure}
 
+\subsection{Parallel Reality}
+
+The discussion in the previous section highlighted that the first distinguishing factor of XR, that differentiates it from other alternate realities such as AR \& AV, is that XR features two discrete environments, one real \& one virtual. The second distinguishing factor is the presence of a bidirectional flow of information between these two environments (figure \ref{virtuality-continuum-cross-reality-information-flows-dashed.png}).
+
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{virtuality-continuum-cross-reality-information-flows-dashed.png}
 		\caption{The two environments that comprise a XR system, plus the bidirectional information flow between them.}
+		\label{virtuality-continuum-cross-reality-information-flows-dashed.png}
 	\end{center}
 \end{figure}
+
+Whilst the systems developed \& explored by this thesis feature two discrete environments, one real \& one virtual, that users can transition between visually observing (figures \ref{virtuality-continuum-cross-reality-2} \& \ref{virtuality-continuum-cross-reality-3}), they do not feature this bidirectional information flow between the environments (other than using sensed real position information to maintain the user's vantage point into the virtual environment).
+
+Thus, the systems developed \& studied in this thesis cannot be considered true XR systems as they do not meet both of the distinguishing criteria. We propose the term \textit{parallel reality} to describe such systems. Parallel reality is thus defined as;
+
+\begin{quote}
+	\textit{A system comprising two environments, one real \& the other virtual, each complete unto itself, wherein the user is granted the ability to transition between receiving stimuli from either.}
+\end{quote}
+
+Should a bidirectional information flow be introduced to a parallel reality system, or the ability to transition between receiving stimuli from either environment into a cross reality system, one would effect \textit{parallel cross reality}.
+
+\textbf{***What happened to coverage of the vacancy problem???***}
+
+\subsection{Spatial Equivalence in Parallel Reality Systems}
+
+When discussing a parallel reality system that allows a user to transition between two environments, one real \& the other virtual, one has to consider the relationship between the two environments, namely whether (\& if so, how much) their layout, dimensions \& content relate to each other $-$ their \textit{spatial equivalence}.
+
+Naturally a parallel reality system would be unrewarding if the real \& virtual environments were identical, however a virtual environment that shares the same fundamental dimensions \& layout as the real environment (it represents the same `place') but presents an alternative representation has been proven to be a useful modality in previous XR research (see section \ref{sec_crossreality}) \& it is this arrangement that the systems developed by this thesis focus on, in particular where the virtual environment represents the same place but at an earlier moment in time.
+
+\textbf{***here}
+
+One might consider the `Second Earth' concept to be the ultimate realisation of this scenario of spatially equivalent real and virtual environments. Discussed by Wade Roush in a 2007 article of MIT's Technology Review magazine~\cite{Roush2007}, which is cited by Lifton in his thesis, Second Earth is theorised as the combination of the notions of virtual world technology (as in Second Life) with `mirror world' technology (as in Google Earth); Second Earth theorises a virtual simulation/reconstruction of the entire physical world, such that for any location in the real world there is a corresponding location in the virtual world. Such a resource would allow for simultaneous presence in corresponding real and virtual environments to take place anywhere, rather than being restricted to specific real world locations for which a corresponding virtual location had been created, such as a cultural heritage site.
+
+Furthermore, if one were to apply the concepts of cross reality to such a global virtual reconstruction, it would in effect create a complete parallel virtual Earth.
+
+\subsubsection{Snow Crash - No Spatial Equivalence}
+In the opening quote to this review, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, called Y.T., both in the real world and in the `Metaverse'. For the sake of this discussion, this Metaverse can be considered analogous to a virtual world akin to Second Life, accessed via a head mounted display, and comprises an entirely synthetic virtual world whose locations have no counterparts in the real world. Y.T.'s response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
+
+In this scenario there is no spatial equivalence between the real environment and the virtual environment - they are not the same `location' or `place' as is the case with VTW - however the concept of simultaneous presence in both can still be useful, as illustrated later in the book. Y.T. is in fact waiting for a third character, Ng, to come and collect her, which leads to the following conversation in the Metaverse between Y.T. and Ng
+
+\begin{quote}
+\textit{``\ldots you're driving?''}
+\\
+\\
+\textit{``Yes. I'm coming to pick you up - remember?''}
+\\
+\\
+\textit{``Do you mind?''}
+\\
+\\
+\textit{``No,'' he sighs, as if he really does.}
+\\
+\\
+\textit{Y.T. gets up and walks around behind his desk to look.}
+\\
+\\
+\textit{Each of the little TV monitors is showing a different view out his van; windshield,  left  window,  right  window, rearview.  Another  one  has  an electronic map  showing his position: inbound on the San Bernardino, not far
+away.}
+\\
+\\
+\textit{``The  van  is  under  voice  command,''  he  explains.  ``I  removed  the steering-wheel-and-pedal  interface because  I found  verbal  commands  more convenient. This  is why I will  sometimes  make unfamiliar  sounds with  my voice - I am controlling the vehicle's systems.''}
+\end{quote}
+
+Ng is driving his van in the real world to come and collect the real Y.T, whilst simultaneously sitting in his virtual house in the Metaverse having a conversation with the virtual Y.T., using a series of virtual TV monitors in the Metaverse to inform him of his real surroundings and to allow him to control the van.
+
+In this scenario there is necessarily no spatial equivalence between the real environment and the virtual environment, as the virtual environment has no spatial equivalent in the real world - the monorail and Ng's house have no real counterparts. However a lack of spatial equivalence between the real environment and the virtual environment could also arise when the virtual location does have a real counterpart, but the user isn't there. For example, in reality a user could be in London whilst in the virtual environment they could be in a location that is spatially equivalent to a real part of Hong Kong.
+
+It is already common to see people interacting with their real location, even if that interaction is limited to just walking from A to B without bumping into too many other people or being run over by a bus, whilst simultaneously interacting with the 2D Web, social media and textual chat via mobile devices such as mobile phones and tablets. With the continued trend toward the 3D Web, it is no leap to imagine a near future in which people regularly want to interact with a 3D virtual environment that is not spatially equivalent to their current location at the same time as walking to the bus stop, thus simultaneous presence in real and virtual environments that are not spatially equivalent promises to be a desirable scenario.
 
 %=========================================================================================================
 
 \subsection{PolySocial Reality in Cross Reality Systems}
 
 \textbf{Some references from HyperReality}
+
+%=========================================================================================================
+
+\subsection{Summary of Additional Alternate Reality Definitions}
+\label{summaryofadditionalalternaterealitydefinitions}
+
+\begin{center}
+\begin{longtable}{| l | p{12cm} |}
+
+\hline	
+	
+%=========================================================================================================
+		
+\textbf{HyperReality (HR)} & A hypothetical high level term referring to a category of mixed realities that combine VR content with views of the real world in a seamless manner such that the observer experiences \textit{hyperreality}. \\
+		
+\hline
+		
+%=========================================================================================================
+
+\textbf{hyperreality} & A postmodern term describing a situation wherein an observer is unable to distinguish between objects that are real \& objects that are virtual. \\
+
+\hline
+
+%=========================================================================================================
+		
+\textbf{PolySocial Reality (PoSR)} & Describes multiple simultaneous social interactions mediated via various computer mediated communications (CMC) technologies.~\cite{Applin2012}. \\
+
+\hline
+
+%=========================================================================================================
+
+\textbf{Cross Reality (XR)} & Systems that feature two environments, one real \& one virtual, both complete unto themselves~\cite{lifton:merging} but enriched by their ability to mutually reflect, influence \& merge into one another thanks to bidirectional information flow between them~\cite{kim:practical}. \\
+
+\hline
+
+%=========================================================================================================
+
+\textbf{Parallel Reality (PR)} & A system comprising two environments, one real \& the other virtual, each complete unto itself, wherein the user is granted the ability to transition between receiving stimuli from either. \\
+
+\hline
+
+%=========================================================================================================
+
+\end{longtable}
+\end{center}
 
 %=========================================================================================================
 %=========================================================================================================
