--- a/bib.bib
+++ b/bib.bib
@@ -48,7 +48,7 @@ year = {2012}
 }
 @article{Andersen,
 author = {Andersen, Peter B\o gh},
-file = {:array\_z/Downloads/TangObj.pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Andersen - Unknown - Tangible Objects Connecting Informational and Physical space.pdf:pdf},
 title = {{Tangible Objects : Connecting Informational and Physical space}}
 }
 @article{Appino1992,
@@ -94,17 +94,17 @@ title = {{Pervasive Computing in Time and Space: The Culture and Context of 'Pla
 url = {http://dx.doi.org/doi:10.1109/IE.2011.65},
 year = {2011}
 }
-@inproceedings{Applin2013,
-author = {Applin, Sally A and Fischer, Michael},
-booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
-title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
-year = {2013}
-}
 @inproceedings{Applin2013a,
 abstract = {We explore how PolySocial Reality (PoSR), a framework for representing how people, devices and communication technologies interrelate, can be applied to developing use cases within integrated IoT and Smart Environment paradigms, giving special consideration to the nature of location-aware messaging from sensors, and the resultant data collection.},
 author = {Applin, Sally A and Fischer, Michael},
 booktitle = {Proceedings of the IEEE Conference on Intelligent User Interfaces (IUI 2013) IUI Workshop on Location Awareness for Mixed and Dual Reality (LAMDa)},
 title = {{Thing Theory: Connecting Humans to Location-Aware Smart Environments}},
+year = {2013}
+}
+@inproceedings{Applin2013,
+author = {Applin, Sally A and Fischer, Michael},
+booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
+title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
 year = {2013}
 }
 @misc{Applin2011b,
@@ -785,16 +785,16 @@ title = {{Database as tar archive suitable for input into pg\_restore}},
 url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
 urldate = {01/04/2013}
 }
-@misc{Daviesa,
-author = {Davies, C J},
-title = {{Pangolin source code}},
-url = {https://bitbucket.org/cj\_davies/viewer-release-serial-io},
-urldate = {01/04/2013}
-}
 @misc{Daviesc,
 author = {Davies, C J},
 title = {{Database as plain-text SQL script file}},
 url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_sql\_plaintext},
+urldate = {01/04/2013}
+}
+@misc{Daviesa,
+author = {Davies, C J},
+title = {{Pangolin source code}},
+url = {https://bitbucket.org/cj\_davies/viewer-release-serial-io},
 urldate = {01/04/2013}
 }
 @inproceedings{Davies2012,
@@ -1141,6 +1141,13 @@ pages = {256},
 title = {{Mirror Worlds: or the Day Software Puts the Universe in a Shoebox...How It Will Happen and What It Will Mean}},
 year = {1993}
 }
+@misc{Gelissen2008,
+author = {Gelissen, Jean},
+publisher = {International Organization for Standardization},
+title = {{Summary of MPEG-V}},
+url = {http://mpeg.chiariglione.org/working\_documents.php},
+year = {2008}
+}
 @article{Gelissen2009,
 annote = {        From Duplicate 1 (                           Introduction to MPEG-V                         - Gelissen, Jean )
                 
@@ -1158,13 +1165,6 @@ title = {{Introduction to MPEG-V}},
 url = {http://journals.tdl.org/jvwr/article/view/742/533},
 volume = {2},
 year = {2009}
-}
-@misc{Gelissen2008,
-author = {Gelissen, Jean},
-publisher = {International Organization for Standardization},
-title = {{Summary of MPEG-V}},
-url = {http://mpeg.chiariglione.org/working\_documents.php},
-year = {2008}
 }
 @article{Gelissen2011,
 abstract = {In this issue, we report on the first phase of MPEG-V, a work that started in 2007. MPEG-V was conceived as a unified effort to develop standards within virtual worlds, and between virtual worlds and real worlds. This work culminated in the publication of the ISO/IEC MPEG-V 'Media context and control' standards in January 2011. The papers in this issue of the Journal of Virtual World Research expose both the many current standards for virtual worlds, as well as the many missing standards. As such, the issue hints at many more places where standards are needed. To fulfill the potential of virtual worlds much more standardization (MPEG-V, and other standards) is needed.},
@@ -1485,19 +1485,12 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {28/03/2013},
 year = {2013}
 }
-@misc{Hughes2006a,
+@misc{Hughes2009,
 author = {Hughes, Ian},
-title = {{Second Life – Outside in}},
-url = {http://eightbar.co.uk/2006/04/09/second-life-outside-in/},
+title = {{Wimbledon – A fanployee perspective}},
+url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
 urldate = {21/05/2012},
-year = {2006}
-}
-@misc{Hughes2006b,
-author = {Hughes, Ian},
-title = {{Well it got my attention – Second Life}},
-url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
-urldate = {21/05/2012},
-year = {2006}
+year = {2009}
 }
 @misc{Hughes2006,
 author = {Hughes, Ian},
@@ -1512,12 +1505,19 @@ url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
 urldate = {21/05/2012},
 year = {2006}
 }
-@misc{Hughes2009,
+@misc{Hughes2006a,
 author = {Hughes, Ian},
-title = {{Wimbledon – A fanployee perspective}},
-url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
+title = {{Second Life – Outside in}},
+url = {http://eightbar.co.uk/2006/04/09/second-life-outside-in/},
 urldate = {21/05/2012},
-year = {2009}
+year = {2006}
+}
+@misc{Hughes2006b,
+author = {Hughes, Ian},
+title = {{Well it got my attention – Second Life}},
+url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
+urldate = {21/05/2012},
+year = {2006}
 }
 @misc{Hunt,
 author = {Hunt, Darran},
@@ -2176,7 +2176,7 @@ annote = {Paper about the Plug sensor/actuator platform developed by the Media L
 author = {Lifton, Joshua and Feldmeier, Mark and Ono, Yasuhiro and Lewis, Cameron and Paradiso, Joseph A.},
 booktitle = {Proceedings of the 6th international conference on Information processing in sensor networks - IPSN '07},
 doi = {10.1145/1236360.1236377},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lifton et al. - 2007 - A Platform for Ubiquitous Sensor Deployment in Occupational and Domestic Environments.pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lifton et al. - 2007 - A platform for ubiquitous sensor deployment in occupational and domestic environments.pdf:pdf},
 isbn = {978159593638X},
 month = apr,
 pages = {119},
@@ -2408,6 +2408,11 @@ photojournalism and everyday use}},
 volume = {36},
 year = {1998}
 }
+@misc{Mann1994,
+author = {Mann, Steve},
+title = {{'Mediated Reality'}},
+year = {1994}
+}
 @misc{Mann2002a,
 abstract = {Mixed Reality exists in many forms along a continuum from Augmented Reality (reality enhanced by graphics, such as Sutherland's work from more than 30 years ago) to more recent efforts at Augmented Virtuality (graphics enhanced by reality, graphics enhanced by video, etc.). Mixed Reality provides numerous ways to add together (mix) various proportions of real and virtual worlds. However, Mediated Reality is an even older tradition, introduced by Stratton more than 100 years ago. Stratton presented two important ideas:  1. the idea of constructing special eyeglasses to modify how he saw the world; and  2. the ecologically motivated approach to conducting his experiments within the domain of his own everyday personal life.  Stratton's seminal work has inspired a wide variety of devices that can be used to augment, deliberately diminish, or otherwise alter human visual perception. The first half of this paper presents some of the problems with the existing taxonomies (e.g. mixed reality) and distinctions (e.g. optical versus video see-through), that arise when we consider reality-modifying devices. The second half of the paper presents various new designs for reality-modifying devices, especially those used to modify only a portion of the visual reality stream, suitable for use in everyday life. These devices have the appearance of ordinary bifocal eyeglasses and reading glasses. Finally, a new kind of reality mediator that uses the eyeglass frames themselves as the mediating element is presented. This design makes it impossible for those other than the wearer, even upon very close inspection, to determine whether or not the eyeglasses contain a reality mediator. Such designs make possible livelong experiments and mediated reality experiences in personal everyday life, without the social stigma associated with obvious reality--modifying devices.  },
 author = {Mann, Steve},
@@ -2416,11 +2421,6 @@ keywords = {HCI,Mediated Reality,UX},
 title = {{Mediated Reality with implementations for everyday life}},
 url = {http://www.mitpressjournals.org/toc/pres/11/4},
 year = {2002}
-}
-@misc{Mann1994,
-author = {Mann, Steve},
-title = {{'Mediated Reality'}},
-year = {1994}
 }
 @misc{Mann2002,
 abstract = {Diminished reality is as important as augmented reality, and both are possible with a device called the Reality Mediator . Over the past two decades, we have designed, built, worn, and tested many different embodiments of this device in the context of wearable computing, Incorporated into the Reality Mediator is an "EyeTap" system, which is a device that quantifies and resynthesizes light that would otherwise pass through one or both lenses of the eye(s) of a wearer. The functional principles of EyeTap devices are discussed, in detail. The EyeTap diverts into a spatial measurement system at least a portion of light that would otherwise pass through the center of projection of at least one lens of an eye of a wearer. The Reality Mediator has at least one mode of operation in which it reconstructs these rays of light, under the control of a wearable computer system. The computer system then uses new results in algebraic projective geometry and comparametric equations to perform head tracking, as well as to track motion of rigid planar patches present in the scene. We describe how our tracking algorithm allows an EyeTap to alter the light from a particular portion of the scene to give rise to a computer-controlled, selectively mediated reality. An important difference between mediated reality and augmented reality includes the ability to not just augment but also deliberately diminish or otherwise alter the visual perception of reality. For example, diminished reality allows additional information to be inserted without causing the user to experience information overload. Our tracking algorithm also takes into account the effects of automatic gain control, by performing motion estimation in both spatial as well as tonal motion coordinates.},
@@ -2645,11 +2645,6 @@ title = {{The Second Life of a Sensor: Integrating Real-world Experience in Virt
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.147.1457},
 year = {2008}
 }
-@misc{mit:doppel,
-author = {MIT},
-howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
-title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
-}
 @misc{MIT,
 annote = {        From Duplicate 1 (                           Responsive Environments Group                         - MIT )
                 
@@ -2666,6 +2661,11 @@ author = {MIT},
 howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/\}},
 title = {{Responsive Environments Group}},
 url = {http://www.media.mit.edu/resenv/}
+}
+@misc{mit:doppel,
+author = {MIT},
+howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
+title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
 }
 @article{Mittal2011,
 author = {Mittal, Manas and Paradiso, Joseph A},
@@ -2702,12 +2702,6 @@ pages = {295--296},
 title = {{Localization System for Large Indoor Environments Using Invisible markers}},
 year = {2008}
 }
-@inproceedings{Okura2011,
-author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
-booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
-title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
-year = {2011}
-}
 @article{Okura2006,
 abstract = {Augmented Telepresence is a technique for viewing a remote site using immersive displays.},
 author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
@@ -2717,6 +2711,12 @@ pages = {4503--4503},
 title = {{Fly-through Heijo Palace Site : Augmented Telepresence Using Aerial Omnidirectional Videos}},
 volume = {1},
 year = {2006}
+}
+@inproceedings{Okura2011,
+author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
+booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
+title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
+year = {2011}
 }
 @misc{Oliver2010,
 author = {Oliver, Iain A and Miller, Alan H D and Allison, Colin},
@@ -2753,6 +2753,12 @@ url = {https://journals.tdl.org/jvwr/article/view/660/536},
 volume = {2},
 year = {2009}
 }
+@misc{OpenGeospatialConsortium,
+annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
+author = {{Open Geospatial Consortium}, Inc.},
+title = {{OWS-4 Demonstration}},
+url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
+}
 @misc{OpenGeospatialConsortiuma,
 annote = {        From Duplicate 1 (                           Welcome to the GSN Project                         - Open Geospatial Consortium, Inc. )
                 
@@ -2763,12 +2769,6 @@ author = {{Open Geospatial Consortium}, Inc.},
 howpublished = {$\backslash$url\{http://sourceforge.net/apps/trac/gsn/\}},
 title = {{Welcome to the GSN Project}},
 url = {http://sourceforge.net/apps/trac/gsn/}
-}
-@misc{OpenGeospatialConsortium,
-annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
-author = {{Open Geospatial Consortium}, Inc.},
-title = {{OWS-4 Demonstration}},
-url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
 }
 @misc{OpenVirtualWorldsgroupSchoolofComputerScience,
 author = {{Open Virtual Worlds group, School of Computer Science}, University of St Ancrews},
@@ -3105,6 +3105,12 @@ keywords = {augmented reality,sense of presence},
 title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
 year = {1992}
 }
+@inproceedings{Regenbrecht2002,
+author = {Regenbrecht, Holger and Schubert, Thomas},
+booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
+title = {{Measuring presence in augmented reality environments: design and a first test of a questionnaire}},
+year = {2002}
+}
 @misc{Regenbrecht2002a,
 abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
 author = {Regenbrecht, Holger and Schubert, Thomas},
@@ -3114,12 +3120,6 @@ number = {4},
 pages = {425--434},
 title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
 volume = {11},
-year = {2002}
-}
-@inproceedings{Regenbrecht2002,
-author = {Regenbrecht, Holger and Schubert, Thomas},
-booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
-title = {{Measuring presence in augmented reality environments: design and a first test of a questionnaire}},
 year = {2002}
 }
 @article{Reilly2010,
@@ -3384,14 +3384,6 @@ title = {{SL1200}},
 url = {http://www.sarantel.com/products/sl1200},
 urldate = {11/02/2013}
 }
-@misc{Schofield2012,
-author = {Schofield, Jack},
-booktitle = {The Guardian Technology Blog},
-title = {{Google Project Glass: will we really wear digital goggles?}},
-url = {http://www.theguardian.com/technology/2012/apr/05/google-project-glass-digital-goggles},
-urldate = {22/12/2014},
-year = {2012}
-}
 @misc{Schubert2001,
 abstract = {Within an embodied cognition framework, it is argued that presence in a virtual environment (VE) develops from the construction of a spatial-functional mental model of the VE. Two cognitive processes lead to this model: the representation of bodily actions as possible actions in the VE, and the suppression of incompatible sensory input. It is hypothesized that the conscious sense of presence reflects these two components as spatial presence and involvement. This prediction was con- firmed in two studies (N ? 246 and N ? 296) assessing self-reports of presence and immersion experiences. Additionally, judgments of “realness” were observed as a third presence component. A second-order factor analysis showed a distinction between presence, immersion, and interaction factors. Building on these results, a thirteen-item presence scale consisting of three independent components was de- veloped and verified using confirmatory factor analyses across the two studies. Presence is a construct, a variable with various levels and dimensions. Biocca and Delaney (1995, p. 62)},
 author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
@@ -3473,16 +3465,6 @@ title = {{Welcome to the New Journal}},
 volume = {1},
 year = {1992}
 }
-@article{Sivan2011,
-abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {3},
-title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
-url = {https://journals.tdl.org/jvwr/article/view/6140},
-volume = {4},
-year = {2011}
-}
 @article{Sivan2009,
 annote = {        From Duplicate 1 (                           Overview: State of Virtual Worlds Standards in 2009                         - Sivan, Yesha )
                 
@@ -3497,6 +3479,16 @@ title = {{Overview: State of Virtual Worlds Standards in 2009}},
 url = {http://journals.tdl.org/jvwr/article/view/671/539},
 volume = {2},
 year = {2009}
+}
+@article{Sivan2011,
+abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {3},
+title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
+url = {https://journals.tdl.org/jvwr/article/view/6140},
+volume = {4},
+year = {2011}
 }
 @article{Sivan2008,
 annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
@@ -3762,6 +3754,13 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/21467889},
 volume = {27},
 year = {2011}
 }
+@book{Terashima2001,
+editor = {Terashima, Nobuyoshi and Tiffin, John},
+isbn = {041526104X},
+publisher = {Routledge},
+title = {{HyperReality: Paradigm for the Third Millenium}},
+year = {2001}
+}
 @article{Thomas2009,
 abstract = {Looks at how through-walls collaboration lets users in the field work in real time with users indoors who have access to reference materials, a global picture, and advanced technology. The concept leverages ubiquitous workspaces, augmented reality, and wearable computers.},
 annote = {        From Duplicate 1 (                           Through-Walls Collaboration                         - Piekarski, Wayne; Thomas, Bruce H. )
@@ -3829,17 +3828,17 @@ publisher = {Springer-Verlag},
 title = {{Virtual Reality as Simulation: The CAVE as "Space of Illusion" in Museum Displays}},
 year = {2002}
 }
-@misc{U-bloxAG2012,
-author = {u-blox AG},
-title = {{MAX-6 Product Summary}},
-url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
-year = {2012}
-}
 @misc{U-bloxAG,
 author = {u-blox AG},
 title = {{MAX-6 series}},
 url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
 urldate = {11/02/2013}
+}
+@misc{U-bloxAG2012,
+author = {u-blox AG},
+title = {{MAX-6 Product Summary}},
+url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
+year = {2012}
 }
 @misc{U-bloxAGa,
 author = {u-blox AG},
@@ -3931,7 +3930,6 @@ year = {2011}
 }
 @misc{Venables2013,
 annote = {Quote from Palmer Luckey
-
         
 'Luckey always shared his plans online to the few stalwarts of the then-small, virtual reality scene "since it kind of crashed in the 90s" he qualifies.'},
 author = {Venables, Michael},
@@ -4144,7 +4142,7 @@ address = {New York, New York, USA},
 author = {Wojciechowski, Rafal and Walczak, Krzysztof and White, Martin and Cellary, Wojciech},
 booktitle = {Proceedings of the ninth international conference on 3D Web technology - Web3D '04},
 doi = {10.1145/985040.985060},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wojciechowski et al. - 2004 - Building Virtual and Augmented Reality museum exhibitions.pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wojciechowski et al. - 2004 - Building Virtual and Augmented Reality museum exhibitions(2).pdf:pdf},
 isbn = {1581138458},
 keywords = {VRML,augmented reality,cultural heritage,virtual reality},
 month = apr,
@@ -4251,11 +4249,4 @@ author = {Zhao, Shanyang},
 booktitle = {Proceedings of the fifth annual international workshop on Presence},
 title = {{Reconceptualizing Presence: Differentiating Between Mode of Presence and Sense of Presence}},
 year = {2002}
-}
-@book{Turkle2011,
-author = {Turkle, Sherry},
-pages = {384},
-publisher = {Basic Books},
-title = {{Alone Together: Why We Expect More From Technology And Less From Each Other}},
-year = {2011}
 }
